[package]
name = "osu"
version = "0.1.0"
authors = ["aoowweenn <aoowweenn@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies.nom]
version = '^2.2'
features = ["verbose-errors"]

[dependencies]
struct-map-derive = { path = "struct-map-derive" }
serde = '^1'
serde_derive = '^1'
serde_json = '^1'